--- a/index.html
+++ b/index.html
@@ -7,20 +7,36 @@
 
   <script src="js/jquery.js"></script>
   <script src="js/highcharts.js"></script>
-    <script src="js/Charty.js"></script>
+  <script src="js/Charty.js"></script>
+
+   <link rel="stylesheet" href="css/bootstrap.css">
+   <link rel="stylesheet" href="css/app.css">
 
 </head>
 <body>
 
 
+
+
+<div class="chart-inputs">
+  <label for="height">height</label><input type="text" name="height" value=600></input>
+  <label for="width">width</label><input type="text" name="width" value=400></input>
+</div>
+
+
 <div id="chart-container">
+
 
 
 </div>
 
-<div id="chart-2" />
+
+
 
   <script src="js/go-charty.js"></script>
+
+
+
 
 </body>
 </html>
