--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 <div class="chart-inputs">
   <label for="height">height</label><input type="text" name="height" value=600></input>
   <label for="width">width</label><input type="text" name="width" value=400></input>
-</div>
+  <label for="chartType">chartType</label><input type="text" name="chartType" value=bar></input>
+<!--   <label for="seriesd">Data</label>
+  <textarea name="seriesd">
+
+  </textarea>
+ --></div>
 
 
 <div id="chart-container">
