--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/highcharts.js"></script>
   <script src="js/Charty.js"></script>
+  <script src="js/svg-download.js"></script>
 
    <link rel="stylesheet" href="css/bootstrap.css">
    <link rel="stylesheet" href="css/app.css">
