Add chartbuilder and crowbar to reference them, start using crowbar in svg-download.js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 
 <div class="chart-inputs">
-  <label for="height">height</label><input type="text" name="height" value=600></input>
-  <label for="width">width</label><input type="text" name="width" value=400></input>
-  <label for="chartType">chartType</label><input type="text" name="chartType" value=bar></input>
+  <label for="height">height</label><input type="text" name="height" value="400"></input>
+  <label for="width">width</label><input type="text" name="width" value="600"></input>
+  <label for="chartType">chartType</label><input type="text" name="chartType" value="line"></input>
 <!--   <label for="seriesd">Data</label>
   <textarea name="seriesd">
 
@@ -37,10 +37,11 @@
 </div>
 
 
+<div id="download-image-link"></div>
 
 
-  <script src="js/go-charty.js"></script>
 
+<script src="js/go-charty.js"></script>
 
 
 
