--- a/index.html
+++ b/index.html
@@ -20,63 +20,141 @@
 <body>
 
 
-<div id="chart-container"></div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h3>Chart customization</h3>
+
+      <form class="form-horizontal" id="chart-config">
+
+        <h4>Chart structure</h4>
+        <section class="row form-group">
+          <div class="col-sm-6">
+            <label for="height">height</label>
+            <input class="form-control" type="text" name="height" value=600></input>
+          </div>
+
+          <div class="col-sm-6">
+            <label for="width">width</label>
+            <input class="form-control" type="text" name="width" value="100%"></input>
+          </div>
+        </section>
+
+         <section class="row form-group">
+            <div class="col-sm-6">
+             <label for="chartType">chartType</label>
+              <select class="form-control" name="chartType">
+                <option value="bar" selected>bar</option>
+                <option value="column">column</option>
+                <option value="line">line</option>
+              </select>
+            </div>
+
+            <div class="col-sm-6">
+              <label for="chartType">stackType</label>
+              <select class="form-control" name="stackType">
+                <option value="grouped" selected>grouped</option>
+                <option value="stacked">stacked</option>
+              </select>
+            </div>
+          </section>
 
 
-<div class="chart-inputs">
-  <label for="height">height</label><input type="text" name="height" value=600></input>
-  <label for="width">width</label><input type="text" name="width" value=400></input>
-  <label for="chartType">chartType</label><input type="text" name="chartType" value=bar></input>
-<!--   <label for="seriesd">Data</label>
-  <textarea name="seriesd">
+          <h4>Chart text</h4>
+          <section class="row form-group">
+            <div class="col-sm-6">
+             <label for="xAxisTitle">xAxisTitle</label>
+              <input type="text" class="form-control" name="xAxisTitle">
+            </div>
+            <div class="col-sm-6">
+             <label for="yAxisTitle">yAxisTitle</label>
+              <input type="text" class="form-control" name="yAxisTitle">
+            </div>
+          </section>
 
-  </textarea>
- --></div>
+        </form>
+    </div> <!-- end of chart customization -->
+
+
+  <div class="col-sm-6">
+
+    <section class="sec">
+        <form action="" class="form-inline" id="data-config">
+
+        <h3>Data Configuration</h3>
+        <h5>Raw data</h5>
+    <textarea id='raw-data' name="rawData" class="form-control" id="" cols="80" rows="10">
+Apples,50,23,18,88
+Oranges,31,45,9,32</textarea>
+
+<!--     <div class="form-group">
+      <input type="radio" class="form-control" name="delimiter" value="CSV" checked> CSV
+      <input type="radio" class="form-control" name="delimiter" value="TSV" > TSV
+    </div>
+ -->
+
+<!--
+        <div class="row">
+            <div class="col-sm-4">
+              <div class="radio">
+                <label>
+                  <input type="radio" class="form-control" name="seriesNameFormat" value="column">
+                  Column-based
+                </label>
+                <table class="table table-bordered"> <thead> <tr> <th> Apples </th> <th> Oranges </th> </tr> </thead> <tbody> <tr> <td> 10 </td> <td> 30 </td> </tr> <tr> <td> 50 </td> <td> 80 </td> </tr> <tr> <td> 42 </td> <td> 20 </td> </tr> <tr> <td> 20 </td> <td> 33 </td> </tr> </tbody> </table>
+              </div>
+            </div>
+
+            <div class="col-sm-4">
+              <div class="radio">
+                <label>
+                  <input type="radio" class="form-control" name="seriesNameFormat" value="row" selected>
+
+                  Row-based
+                </label>
+
+                <table class="table table-bordered"><tbody><tr><td><strong>Apples</strong></td><td>10</td><td>50</td><td>42</td><td>20</td></tr><tr><td><strong>Oranges</strong></td><td>30</td><td>80</td><td>20</td><td>33</td></tr></tbody></table>
+              </div>
+            </div>
+          </div>
+          <!-- row -->
+ -->
+
+
+        </form>
+     </section>  <!-- end of data stuff-->
+
+
+
+  </div>
+
+  </div> <!-- row -->
+
+</div> <!-- container -->
+
+
 
 
 <section class="sec">
+  <h3 style="text-align: center;">Rendered Chart</h3>
 
-  <h5>Data</h5>
-  <textarea id='chart-rawData' name="rawData" id="" cols="80" rows="10">
-Apples,50,23,18,88
-Oranges,31,45,9,32
-  </textarea>
-<div>
-    <input type="radio" name="delimiter" value="CSV" checked> CSV
-    <input type="radio" name="delimiter" value="TSV" > TSV
-
-</div>
-
-  <section class="sec">
-
-    <div class="container">
-    <h3>Kinds of data</h3>
-
-      <div class="row">
-          <div class="col-sm-4">
-            <h5>Column-based</h5>
-              <table class="table table-bordered"> <thead> <tr> <th> Apples </th> <th> Oranges </th> </tr> </thead> <tbody> <tr> <td> 10 </td> <td> 30 </td> </tr> <tr> <td> 50 </td> <td> 80 </td> </tr> <tr> <td> 42 </td> <td> 20 </td> </tr> <tr> <td> 20 </td> <td> 33 </td> </tr> </tbody> </table>
-          </div>
-
-          <div class="col-sm-4">
-            <h5>Row-based</h5>
-
-            <table class="table table-bordered"><tbody><tr><td><strong>Apples</strong></td><td>10</td><td>50</td><td>42</td><td>20</td></tr><tr><td><strong>Oranges</strong></td><td>30</td><td>80</td><td>20</td><td>33</td></tr></tbody></table>
-          </div>
+  <div style="padding: 10px; border: thin solid #aaa; background: #eee">
+    <div id="chart-container" style="background: #fff;"></div>
+  </div>
 
 
+  <div class="container">
+    <h3>Chart output</h3>
 
-      </div> <!-- row -->
-    </div> <!-- container -->
-  </section>
+    <textarea name="chart-json" id="chart-json" cols="120" rows="30">
+      The chart's configuration will show up here...
+    </textarea>
+
+  </div>
 
 </section>
 
-<div id="chart-container">
-
-
-
-</div>
 
 
 
