Markup changes to add links at bottom, finish SVG download function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 </div>
 
 
-<div id="download-image-link"></div>
+<div id="download-image-link">
+  <a href="#" class="prep">Create image of chart</a>
+  <a href="#" style="display: none;" class="download-svg">Download SVG</a>
+</div>
 
 
 
