Add canvg, autoload chart

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ Oranges,31,45,9,32</textarea>
 <div id="download-image-link">
   <a href="#" class="prep">Create image of chart</a>
   <a href="#" style="display: none;" class="download-svg">Download SVG</a>
+  <a href="#" style="display: none;" class="download-png">Download PNG</a>
 </div>
 
 
