PNG download works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="js/Charty.js"></script>
   <script src="js/Charty.Data.js"></script>
   <script src="js/svg-download.js"></script>
+  <script src="js/canvg.js"></script>
 
    <link rel="stylesheet" href="css/bootstrap.css">
    <link rel="stylesheet" href="css/app.css">
@@ -162,6 +163,7 @@ Oranges,31,45,9,32</textarea>
   <a href="#" style="display: none;" class="download-svg">Download SVG</a>
   <a href="#" style="display: none;" class="download-png">Download PNG</a>
 </div>
+<canvas id="canvas" width="1000px" height="600px" style="display: none;"></canvas> 
 
 
 
