Add rgbcolor, a dependency of canvg

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   <script src="js/jquery.parse.js"></script>
 
   <script src="js/highcharts.js"></script>
+  <script src="js/rgbcolor.js"></script>
+  <script src="js/canvg.js"></script>
+  
   <script src="js/Charty.js"></script>
   <script src="js/Charty.Chart.js"></script>
   <script src="js/Charty.Data.js"></script>
   <script src="js/svg-download.js"></script>
-  <script src="js/canvg.js"></script>
 
-   <link rel="stylesheet" href="css/bootstrap.css">
-   <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/app.css">
 
 </head>
 <body>
