--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>SkiftCharty App</title>
-  <script src="js/underscore.js"></script>
+<!doctype html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <title>HighCharty (YO)</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css styles/vendor.css -->
+        <!-- bower:css -->
 
-  <script src="js/jquery.js"></script>
-  <script src="js/jquery.parse.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+        <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="styles/main.css">
+        <!-- endbuild -->
+    </head>
+    <body>
 
-  <script src="js/highcharts.js"></script>
-  <script src="js/rgbcolor.js"></script>
-  <script src="js/canvg.js"></script>
-  
-  <script src="js/Charty.js"></script>
-  <script src="js/Charty.Chart.js"></script>
-  <script src="js/Charty.Data.js"></script>
-  <script src="js/svg-download.js"></script>
 
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/app.css">
 
-</head>
-<body>
+
+
+
+
+
+
 
 
 
@@ -161,8 +165,70 @@ Pears,10,80,34,22</textarea>
 
 
 
-  <script src="js/go-charty.js"></script>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- build:js scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="scripts/vendor/underscore.js"></script>
+        <script src="scripts/vendor/jquery.js"></script>
+        <script src="scripts/vendor/jquery.parse.js"></script>
+        <script src="scripts/vendor/highcharts.js"></script>
+<!--         <script src="../bower_components/jquery/dist/jquery.js"></script> -->
+
+        <!-- endbower -->
+        <!-- endbuild -->
+
+
+
+
+
+        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/lib/Charty.js"></script>
+        <script src="scripts/lib/Charty.Chart.js"></script>
+        <script src="scripts/lib/Charty.Data.js"></script>
+        <script src="scripts/lib/canvg.js"></script>
+        <script src="scripts/lib/chartbuilder.js"></script>
+        <script src="scripts/lib/svg-crowbar.js"></script>
+        <script src="scripts/lib/svg-download.js"></script>
+
+        <script src="scripts/go-charty.js"></script>
+        <!-- endbuild -->
 </body>
 </html>
+
+
+
+
+
+
+
+
+        <!-- IGNORE THIS FOR NOWbuild:js scripts/plugins.js -->
+      <!--   <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script> -->
+        <!-- endbuild -->
