--- a/app/index.html
+++ b/app/index.html
@@ -202,8 +202,7 @@ Pears,10,80,34,22</textarea>
         <script src="scripts/lib/Charty.Chart.js"></script>
         <script src="scripts/lib/Charty.Data.js"></script>
         <script src="scripts/lib/canvg.js"></script>
-        <script src="scripts/lib/chartbuilder.js"></script>
-        <script src="scripts/lib/svg-crowbar.js"></script>
+        <script src="scripts/lib/rgbcolor.js"></script>
         <script src="scripts/lib/svg-download.js"></script>
 
         <script src="scripts/go-charty.js"></script>
