--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,8 @@ Pears,10,80,34,22</textarea>
         <script src="scripts/vendor/jquery.js"></script>
         <script src="scripts/vendor/jquery.parse.js"></script>
         <script src="scripts/vendor/highcharts.js"></script>
+        <script src="scripts/vendor/director.js"></script>
+
 <!--         <script src="../bower_components/jquery/dist/jquery.js"></script> -->
 
         <!-- endbower -->
@@ -206,6 +208,7 @@ Pears,10,80,34,22</textarea>
         <script src="scripts/lib/svg-download.js"></script>
 
         <script src="scripts/go-charty.js"></script>
+        <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
