--- a/app/index.html
+++ b/app/index.html
@@ -190,7 +190,6 @@ Pears,10,80,34,22</textarea>
         <script src="scripts/vendor/highcharts.js"></script>
         <script src="scripts/vendor/director.js"></script>
 
-<!--         <script src="../bower_components/jquery/dist/jquery.js"></script> -->
 
         <!-- endbower -->
         <!-- endbuild -->
@@ -202,6 +201,7 @@ Pears,10,80,34,22</textarea>
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/lib/Charty.js"></script>
         <script src="scripts/lib/Charty.Chart.js"></script>
+        <script src="scripts/lib/Charty.DataParser.js"></script>
         <script src="scripts/lib/Charty.Data.js"></script>
         <script src="scripts/lib/canvg.js"></script>
         <script src="scripts/lib/rgbcolor.js"></script>
