--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,34 @@
     </script>
 
     <!-- include source files here... -->
+ <!-- build:js scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="scripts/vendor/underscore.js"></script>
+        <script src="scripts/vendor/jquery.js"></script>
+        <script src="scripts/vendor/jquery.parse.js"></script>
+        <script src="scripts/vendor/highcharts.js"></script>
+        <script src="scripts/vendor/director.js"></script>
+
+
+        <!-- endbower -->
+        <!-- endbuild -->
+
+
+
+
+
+        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/lib/Charty.js"></script>
+        <script src="scripts/lib/Charty.Chart.js"></script>
+        <script src="scripts/lib/Charty.DataParser.js"></script>
+        <script src="scripts/lib/Charty.Data.js"></script>
+        <script src="scripts/lib/canvg.js"></script>
+        <script src="scripts/lib/rgbcolor.js"></script>
+        <script src="scripts/lib/svg-download.js"></script>
+
+        <!-- endbuild -->
+
+
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
