--- a/app/index.html
+++ b/app/index.html
@@ -111,10 +111,13 @@
 
         <h3>Data Configuration</h3>
         <h5>Raw data</h5>
-    <textarea id='raw-data' name="rawData" class="form-control" id="" cols="80" rows="10">,Fall,Winter,Spring,Summer
-Apples,50,23,18,88
-Oranges,31,45,9,32
-Pears,10,80,34,22</textarea>
+    <textarea id='raw-data' name="rawData" class="form-control" id="" cols="80" rows="10">seriesKey,name,y
+Apples,Fall,48
+Apples,Winter,82
+Oranges,Fall,34
+Oranges,Winter,98
+Pears,Fall,45
+Pears,Winter,149</textarea>
 
 
         </form>
