--- a/test/index.html
+++ b/test/index.html
@@ -48,7 +48,8 @@
 
 
     <!-- include spec files here... -->
-    <script src="spec/test.js"></script>
+    <script src="spec/charty.dataParser.spec.js"></script>
+    <script src="spec/charty.data.spec.js"></script>
 
     <script>mocha.run()</script>
 </body>
