--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,7 @@
     <!-- include spec files here... -->
     <script src="spec/charty.dataParser.spec.js"></script>
     <script src="spec/charty.data.spec.js"></script>
+    <script src="spec/charty.chart.spec.js"></script>
 
     <script>mocha.run()</script>
 </body>
