--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
 
           <section>
             <label for="colors">Colors</label>
-            <input type="text" class="form-control" name="colors" value="#EAD333,#3CDABA,#B65A4A">
+            <input type="text" class="form-control" name="colors" value="#6699cc,#003366,#EAD333,#3CDABA,#B65A4A">
           </section>
 
 
@@ -86,6 +86,12 @@
              <label for="yAxisTickPixelInterval">Tick Px Interval</label>
               <input type="text" class="form-control" value="80" name="yAxisTickPixelInterval">
             </div>
+
+            <div class="col-sm-6">
+             <label for="yAxisMin">yAxis min</label>
+              <input type="text" class="form-control" value="0" name="yAxisMin">
+            </div>
+
           </section>
 
 
