--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <script src="scripts/vendor/jquery.parse.js"></script>
         <script src="scripts/vendor/highcharts.js"></script>
         <script src="scripts/vendor/page.router.js"></script>
+        <script src="scripts/vendor/page.router.query.js"></script>
 
         <script src="../bower_components/really-simple-colorpicker/jquery.colorPicker.js"></script>
 
@@ -84,20 +85,3 @@
 
 
 
-
-
-
-        <!-- IGNORE THIS FOR NOWbuild:js scripts/plugins.js -->
-      <!--   <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script> -->
-        <!-- endbuild -->
