no router needed, go figure

--- a/app/index.html
+++ b/app/index.html
@@ -26,31 +26,12 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="scripts/vendor/underscore.js"></script>
         <script src="scripts/vendor/jquery.js"></script>
         <script src="scripts/vendor/jquery.parse.js"></script>
         <script src="scripts/vendor/highcharts.js"></script>
-        <script src="scripts/vendor/page.router.js"></script>
         <script src="scripts/vendor/page.router.query.js"></script>
 
         <script src="../bower_components/really-simple-colorpicker/jquery.colorPicker.js"></script>
@@ -73,9 +54,8 @@
         <script src="scripts/lib/canvg.js"></script>
         <script src="scripts/lib/rgbcolor.js"></script>
         <script src="scripts/lib/svg-download.js"></script>
-
+        <script src="scripts/appController.js"></script>
         <script src="scripts/main.js"></script>
-        <script src="scripts/router.js"></script>
 
         <!-- endbuild -->
 </body>
