--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,13 @@
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="scripts/vendor/underscore.js"></script>
-        <script src="scripts/vendor/jquery.js"></script>
-        <script src="scripts/vendor/jquery.parse.js"></script>
-        <script src="scripts/vendor/highcharts.js"></script>
-        <script src="scripts/vendor/page.router.query.js"></script>
 
+        <script src="../bower_components/underscore/underscore.js"></script>
+        <script src="../bower_components/backbone/backbone.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="../bower_components/really-simple-colorpicker/jquery.colorPicker.js"></script>
+
+        <script src="../bower_components/requirejs/require.js" data-main="scripts/main"></script>
 
 
         <!-- endbower -->
@@ -48,13 +48,9 @@
 
 
         <script src="scripts/lib/Charty.js"></script>
-        <script src="scripts/lib/Charty.Chart.js"></script>
-        <script src="scripts/lib/Charty.DataParser.js"></script>
-        <script src="scripts/lib/Charty.Data.js"></script>
-        <script src="scripts/lib/canvg.js"></script>
-        <script src="scripts/lib/rgbcolor.js"></script>
-        <script src="scripts/lib/svg-download.js"></script>
-        <script src="scripts/appController.js"></script>
+        <script src="scripts/lib/Charty/Charty.Chart.js"></script>
+        <script src="scripts/lib/Charty/Charty.DataParser.js"></script>
+        <script src="scripts/lib/Charty/Charty.Data.js"></script>
         <script src="scripts/main.js"></script>
 
         <!-- endbuild -->
