--- a/test/index.html
+++ b/test/index.html
@@ -20,13 +20,11 @@
     <!-- include source files here... -->
  <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="scripts/vendor/underscore.js"></script>
-        <script src="scripts/vendor/jquery.js"></script>
+        <script src="../bower_components/underscore/underscore.js"></script>
+        <script src="../bower_components/backbone/backbone.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="scripts/vendor/jquery.parse.js"></script>
         <script src="scripts/vendor/highcharts.js"></script>
-        <script src="scripts/vendor/director.js"></script>
-
-
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -36,9 +34,10 @@
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/lib/Charty.js"></script>
-        <script src="scripts/lib/Charty.Chart.js"></script>
-        <script src="scripts/lib/Charty.DataParser.js"></script>
-        <script src="scripts/lib/Charty.Data.js"></script>
+        <script src="scripts/lib/Charty/Charty.Chart.js"></script>
+        <script src="scripts/lib/Charty/Charty.DataParser.js"></script>
+        <script src="scripts/lib/Charty/Charty.Data.js"></script>
+
         <script src="scripts/lib/canvg.js"></script>
         <script src="scripts/lib/rgbcolor.js"></script>
         <script src="scripts/lib/svg-download.js"></script>
