--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,11 @@
         <script src="scripts/lib/Charty/Charty.DataParser.js"></script>
         <script src="scripts/lib/Charty/Charty.Data.js"></script>
 
+        <script src="scripts/lib/Charty/BackCharty.Component.js"></script>
+        <script src="scripts/lib/Charty/BackCharty.Chart.js"></script>
+
+
+
         <script src="scripts/lib/canvg.js"></script>
         <script src="scripts/lib/rgbcolor.js"></script>
         <script src="scripts/lib/svg-download.js"></script>
@@ -50,6 +55,7 @@
     <script src="spec/charty.dataParser.spec.js"></script>
     <script src="spec/charty.data.spec.js"></script>
     <script src="spec/charty.chart.spec.js"></script>
+    <script src="spec/backcharty.spec.js"></script>
 
     <script>mocha.run()</script>
 </body>
