--- a/test/index.html
+++ b/test/index.html
@@ -54,7 +54,7 @@
     <!-- include spec files here... -->
     <script src="spec/charty.dataParser.spec.js"></script>
     <script src="spec/charty.data.spec.js"></script>
-    <script src="spec/charty.chart.spec.js"></script>
+    <script src="spec/backcharty.chart.spec.js"></script>
     <script src="spec/backcharty.spec.js"></script>
 
     <script>mocha.run()</script>
