--- a/app/index.html
+++ b/app/index.html
@@ -47,15 +47,13 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
 
 
-        <script src="scripts/lib/Charty.js"></script>
+        <!-- endbuild -->
+
+<!--         <script src="scripts/lib/Charty.js"></script>
         <script src="scripts/lib/Charty/Charty.Chart.js"></script>
         <script src="scripts/lib/Charty/Charty.DataParser.js"></script>
         <script src="scripts/lib/Charty/Charty.Data.js"></script>
-
-
-
-
-        <!-- endbuild -->
+ -->
 </body>
 </html>
 
