--- a/app/c.html
+++ b/app/c.html
@@ -44,14 +44,8 @@
 
 </div> <!-- #the-content -->
 
-<script src="scripts/vendor/jquery.js"></script>
-<script src='../bower_components/underscore/underscore.js'></script>
-<script src='../bower_components/backbone/backbone.js'></script>
-<script src="scripts/lib/ChartyConfigurer/chartyConfigurer.js"></script>
-<script src="scripts/lib/ChartyConfigurer/chartyPackager.js"></script>
-<script src="scripts/lib/ChartyConfigurer/chartyBackboneStuff.js"></script>
+        <script src="../bower_components/requirejs/require.js" data-main="scripts/main_c"></script>
 
-<script src="scripts/lib/ChartyConfigurer/chartyConfigurerReady.js"></script>
 
 
 
