--- a/app/c.html
+++ b/app/c.html
@@ -40,10 +40,13 @@
                 <h5>Packaged JSON here</h5>
                 <pre><code id="the-json"></code></pre>
             </div>
-
         </div>
     </section>
 
+    <section class="container">
+        <div id="the-chart"></div>
+
+    </section>
 
 
 </div> <!-- #the-content -->
