--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     </head>
     <body>
 
+
 <div id="the-content">
 
 </div> <!-- #the-content -->
@@ -25,11 +26,34 @@
 
 
 
+
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="../bower_components/jquery/dist/jquery.js"></script>
-        <script src="../bower_components/backbone/backbone.js"></script>
-        <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+
+        <!-- endbower -->
+        <!-- endbuild -->
+
+
+
+
+
+        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <!-- endbuild -->
+
+        <script src="../bower_components/requirejs/require.js" data-main="scripts/main_c"></script>
+</body>
+
+
+
+
+
+
+
+
+
+<!--
+
+       <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
@@ -42,21 +66,8 @@
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
         <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
         <script src="../bower_components/requirejs/require.js"></script>
-        <script src="../bower_components/underscore/underscore.js"></script>
         <script src="../bower_components/almond/almond.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
-
-
-
-
-
-        <!-- build:js({app,.tmp}) scripts/main.js -->
-        <!-- endbuild -->
-
-        <script src="../bower_components/requirejs/require.js" data-main="scripts/main"></script>
-
-</body>
+         -->
 </html>
 
 
